--- a/main.html
+++ b/main.html
@@ -33,19 +33,18 @@
         <input type="text" id="colour_id" placeholder="Color">
 
         <button id="change_button">Change Color</button>
-        <button id="reset_button">Reset</button>
+        <button id="Reset">Reset</button>
 
 		<script>
 			//your JS code here. If required.
 let changeColor = document.getElementById('change_button')
-let reset = document.getElementById('reset_button')
+let reset = document.getElementById('Reset')
 
 changeColor.addEventListener('click',function(){
 	let blockId = document.getElementById('block_id').value;
 	let color = document.getElementById('colour_id').value;
 
 	document.getElementById('grid-item-' + blockId).style.backgroundColor = color;
-
 
 });
 
