--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		</style>
     </head>
     <body>
-        <div id="grid-container">
+        <div class="grid-container" id="grid-container">
             <div id="grid-item-1">1</div>
             <div id="grid-item-2">2</div>
 			<div id="grid-item-3">3</div>
