--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 	gap:10px;
 }
 
-#grid-container div {
+.grid-item {
     border: 1px solid black;
     padding: 20px;
     text-align: center;
@@ -18,15 +18,15 @@
     </head>
     <body>
         <div class="grid-container" id="grid-container">
-            <div id="grid-item-1">1</div>
-            <div id="grid-item-2">2</div>
-			<div id="grid-item-3">3</div>
-			<div id="grid-item-4">4</div>
-			<div id="grid-item-5">5</div>
-			<div id="grid-item-6">6</div>
-			<div id="grid-item-7">7</div>
-			<div id="grid-item-8">8</div>
-			<div id="grid-item-9">9</div>
+            <div class="grid-item" id="grid-item-1">1</div>
+            <div class="grid-item" id="grid-item-2">2</div>
+			<div class="grid-item" id="grid-item-3">3</div>
+			<div class="grid-item" id="grid-item-4">4</div>
+			<div class="grid-item" id="grid-item-5">5</div>
+			<div class="grid-item" id="grid-item-6">6</div>
+			<div class="grid-item" id="grid-item-7">7</div>
+			<div class="grid-item" id="grid-item-8">8</div>
+			<div class="grid-item" id="grid-item-9">9</div>
         </div>
 
         <input type="text" id="block_id" placeholder="Block ID">
