--- a/main.html
+++ b/main.html
@@ -13,7 +13,12 @@
     border: 1px solid black;
     padding: 20px;
     text-align: center;
+	
 }
+
+			#reset_button{
+				border-radius:5px;
+			}
 		</style>
     </head>
     <body>
@@ -33,7 +38,7 @@
         <input type="text" id="colour_id" placeholder="Color">
 
         <button id="change_button">Change Color</button>
-        <button id="Reset">Reset</button>
+        <button id="Reset reset_button">Reset</button>
 
 		<script>
 			//your JS code here. If required.
