--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
         <input type="text" id="colour_id" placeholder="Color">
 
         <button id="change_button">Change Color</button>
-        <button id="Reset reset_button">Reset</button>
+        <button id="Reset">Reset</button>
 
 		<script>
 			//your JS code here. If required.
