--- a/main.html
+++ b/main.html
@@ -38,12 +38,12 @@
         <input type="text" id="colour_id" placeholder="Color">
 
         <button id="change_button">Change Color</button>
-        <button id="Reset">Reset</button>
+        <button id="reset_button">Reset</button>
 
 		<script>
 			//your JS code here. If required.
 let changeColor = document.getElementById('change_button')
-let reset = document.getElementById('Reset')
+let reset = document.getElementById('reset_button')
 
 changeColor.addEventListener('click',function(){
 	let blockId = document.getElementById('block_id').value;
