--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
 
 		<script>
 			//your JS code here. If required.
-let changeColor = document.getElementById('change_button')
+let Change = document.getElementById('change_button')
 let reset = document.getElementById('reset_button')
 
 changeColor.addEventListener('click',function(){
