--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
 let Change = document.getElementById('change_button')
 let reset = document.getElementById('reset_button')
 
-changeColor.addEventListener('click',function(){
+Change.addEventListener('click',function(){
 	let blockId = document.getElementById('block_id').value;
 	let color = document.getElementById('colour_id').value;
 
