--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
         <input type="text" id="block_id" placeholder="Block ID">
         <input type="text" id="colour_id" placeholder="Color">
 
-        <button id="change_button">Change Color</button>
+        <button id="change_button">Change</button>
         <button id="reset_button">Reset</button>
 
 		<script>
